--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 #navbar{
     display:flex;
     align-items: center;
-    position:relative;
+    position:sticky;
+    top: 0px;
 }
 #navbar::before{
 content:"";
