--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ input[type='submit']{
    margin-left:35%;
    width:30%;
 }
-@media (max-width:1024px){
+@media screen and (max-width:1024px){
    #skill{
     flex-direction:column;
    }
@@ -205,7 +205,7 @@ input[type='submit']{
     width: 22rem;
 }
 }
-@media (max-width:414px){
+@media screen and (max-width:414px){
 input[type='submit']{
     margin-left:42%;
     width:30%;
