--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1{
     text-align: center; 
 }
 .image img{
-    height: 25rem;
+    height: 22rem;
     width: 20rem;
     border-radius: 2rem;
 }
@@ -177,7 +177,7 @@ input[type='reset']{
    }
    .image{
     flex-direction:column;
-    height:30rem;
+    height:21.5rem;
     padding:7rem;
    }
    .img p{
@@ -239,6 +239,15 @@ input[type='submit']{
         font-size: 2rem;
     }
     #skills{
+        font-size: 2rem;
+    }
+    h2{
+        font-size: 2rem;
+    }
+    .paras{
+        font-size: 1rem;
+    }
+    #contacts{
         font-size: 2rem;
     }
     input[type='submit']{
